%% Hostel MySQL ER — regenerate PNG: npx @mermaid-js/mermaid-cli -i docs/mysql-schema.mmd -o docs/mysql-schema.png
erDiagram
  districts ||--o{ wards : has
  districts ||--o{ properties : has
  wards ||--o{ properties : has
  users ||--o{ user_roles : has
  users ||--o| tenant_profiles : has
  users ||--o{ properties : owns
  users ||--o{ contracts : signs
  users ||--o{ contract_occupants : shares
  properties ||--o{ rooms : has
  rooms ||--o{ room_photos : has
  rooms ||--o{ contracts : has
  contracts ||--o{ contract_occupants : has
  contracts ||--o{ meter_readings : has
  contracts ||--o{ billing_periods : has

  districts {
    int id PK
    string code
    string name
    string type
  }

  wards {
    int id PK
    int district_id FK
    string name
  }

  users {
    bigint id PK
    string email
    string password_hash
    string full_name
    string phone
    string status
  }

  user_roles {
    bigint id PK
    bigint user_id FK
    string role
  }

  tenant_profiles {
    bigint user_id PK
    string citizen_id
    string photo_url
  }

  properties {
    bigint id PK
    bigint owner_id FK
    string name
    int district_id FK
    int ward_id FK
    string description
  }

  rooms {
    bigint id PK
    bigint property_id FK
    string room_code
    int max_occupancy
    string status
    string monthly_rent
    string internet_fee_monthly
    string service_fee_monthly
  }

  room_photos {
    bigint id PK
    bigint room_id FK
    string url
    int sort_order
    bool is_cover
  }

  contracts {
    bigint id PK
    bigint room_id FK
    bigint tenant_user_id FK
    bigint owner_user_id FK
    string contract_no
    string start_date
    string status
  }

  contract_occupants {
    bigint id PK
    bigint contract_id FK
    bigint user_id FK
  }

  meter_readings {
    bigint id PK
    bigint contract_id FK
    string utility_type
    date reading_at
    string index_value
    string photo_url
  }

  billing_periods {
    bigint id PK
    bigint contract_id FK
    int period_year
    int period_month
    string electricity_amount
    string water_amount
    string internet_fee
    string service_fee
    string rent_amount
    string total_due
    string status
  }
